Tue Mar 30 14:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: Position image correctly in flipped views.
	* Source/NSSplitView.m: Position dimple image correctly when flipped.
	* Source/NSImage.m: Tidied a little
	* Source/NSScrollView.m: Work when flipped - and make NSScrollView
	flipped unless a subclass dictates otherwise.

Tue Mar 30 05:26:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSScroller.h: Modified ([-setContentView:]) and
	([-contentView]) to use NSClipView rather than NSView.
	* NSScroller.m: Modified ([-setContentView:]) and ([-contentView]) to
	use NSClipView rather than NSView.

Sat Mar 27 05:58:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBrowser.m: Override target, setTarget, action, setAction
	* Headers/AppKit/NSBrowser.h: Add _action and _target ivars.

FRi Mar 26 20:34:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSImage.m: Incorporated fixes suggested by dave@turbocat.de

Thu Mar 25 20:34:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Mostly fixes to cope with case where tracking rectangles are
	removed from a window while an event that refers to them is still
	in the queue.
	* Source/NSView.m: Handle invalidation of cursor rectangles.
	* Source/NSWindow.m: Cope with invalidated cursor rects.
	* Source/NSEvent.m: Retain tracking rectangles.
	* Source/GSTrackingRect.m: Added support for invalidation.
	* Source/NSApplication.m: Deactivate app on hide.
	* Headers/AppKit/NSApplication.h: flag to decide whether to unhide
	on application activation.

Thu Mar 25 09:12:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: Added all the exceptions mentioned in the docs.

Wed Mar 24 10:52:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/NSMenu.m: ([-acceptsFirstmouse:]) implemented.
        * Source/NSScroller.m: ([-acceptsFirstmouse:]) implemented.